[gd_scene load_steps=8 format=2]

[ext_resource path="res://ball/ball.gd" type="Script" id=1]
[ext_resource path="res://materials/ball_white.tres" type="Material" id=2]
[ext_resource path="res://ball/input_behaviour/gravity.gd" type="Script" id=3]
[ext_resource path="res://ball/input_behaviour/no_gravity.gd" type="Script" id=4]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="CubeMesh" id=3]

[node name="ball" type="StaticBody"]
script = ExtResource( 1 )

[node name="sphere" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="tween" type="Tween" parent="."]

[node name="InputBehaviour" type="Node" parent="."]

[node name="Gravity" type="Node" parent="InputBehaviour"]
script = ExtResource( 3 )

[node name="NoGravity" type="Node" parent="InputBehaviour"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.25, 0, 0, 0, 1, 0, 0, 0, 0.2, 0, 1.56104, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null
[connection signal="input_event" from="." to="." method="_on_ball_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ball_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ball_mouse_exited"]
